--- a/bib.bib
+++ b/bib.bib
@@ -9101,3 +9101,13 @@ the Simulated Greenland Surface Mass Balance},
   pages={1483--1506},
   year={1990}
 }
+
+@article{SNP2001JAS,
+  title={The weak temperature gradient approximation and balanced tropical moisture waves},
+  author={Sobel, Adam H and Nilsson, Johan and Polvani, Lorenzo M},
+  journal={Journal of the atmospheric sciences},
+  volume={58},
+  number={23},
+  pages={3650--3665},
+  year={2001}
+}
