--- a/reviews/response-to-reviewers.tex
+++ b/reviews/response-to-reviewers.tex
@@ -22,7 +22,11 @@
 
 {\color{red}{We would like to thank both reviewers for taking the time to provide thoughtful feedback on our manuscript.}} \newline
 
-{\color{red}{Both reviewers raise a similar concern, that the manuscript lacks discussion on how the results from this single model may extend to other modeling systems. We agree with the reviewers, and in particular reviewer 1, that doing so would generalize the results more broadly, providing the breadth that often characterizes QJRMS articles. We have added a paragraph right after the first paragraph in the introduction, to more clearly frame the problem as common to most AGCMs, and how understanding a single model would shed light on resolution sensitivities in other modeling systems. Figure 1 has been updated to include convergence experiments from two non-NCAR models, HadAM3 \citep{PS2002CD} and ECHAM5 \citep{HETAL2006JC}, and we have discussed whether those model results are consistent with our findings throughout the conclusions (Lines XXX, etc ...).}}
+{\color{red}{Both reviewers raise a similar concern, that the manuscript lacks discussion on how the results from this single model may extend to other modeling systems. We agree with the reviewers, and in particular reviewer 1, that doing so would generalize the results more broadly, providing the breadth that often characterizes QJRMS articles. We have added a paragraph right after the first paragraph in the introduction, to more clearly frame the problem as common to other AGCMs, and how understanding a single model would shed light on resolution sensitivities in other modeling systems. Figure 1 has been updated to include convergence experiments from two non-NCAR models, HadAM3 \citep{PS2002CD} and ECHAM5 \citep{HETAL2006JC}, and we have discussed whether those model results are consistent with our findings in the conclusions. All edits are in red font in the revised manuscript.}} \newline
+
+{\color{red}{We would like to make aware upfront that our response to reviewer 2 substantially changes one of our main conclusions. We had originally attributed the increase in stability with resolution to greater subsiding motion, but as stated in the original manuscript, this only explains about half the increase in stability in deep tropics. Four paragraphs of text and two additional figures (one of them supplemental) has been added to the end of the ``deep tropics" sub-section to decipher the additional mechanism driving the increase in stability with resolution (tl;dr, greater ascending motion with resolution drives greater condensational heating, that stabilizes the free troposphere).}} \newline
+
+{\color{red}{All edits are in red font in the revised manuscript.}}
 
 \section*{\large Reviewer 1}
 
@@ -46,7 +50,9 @@ might be possible, and the authors of this manuscript understand this resolution
 dependence better than just about anyone. They are therefore well-poised to
 comment on possible solutions: especially those that might generalize to other modeling systems. \newline
 
-{\color{red}{Working on this.}}
+{\color{red}{Thank you for the question. My thinking on this issue, at least as it pertains to convection, has evolved over the course of this study. While there are some clear advantages to having the cloud macrophyiscs/microphysics take over for some convection at these higher resolutions \citep[e.g.,][]{OETAL2016JAMES}, I've become more concerned about the massive circulations that results from aliasing convection to these scales. For example in global 1/4 degree runs AMIP runs with CAM, the Tropical West Pacific double-ITCZ `doubles-down' at higher resolution, resulting in a drier, degraded climate. I'm fairly certain that this arises from the expansive subsidence zone that results from rigorously convecting/ascending regions in the West Pacific at high resolution. This West Pacific bias is resilient; it exists CAM4, CAM5 and CAM6 simulations. I'm un-sure if E3SM was able to tune away this problem in their high-res runs, but I would think that would be a tough uphill battle.}} \newline
+
+{\color{red}{I think what is needed is a deep convection scheme that has the flexibility to intervene / prevent / limit these types of large, unrealistic convective circulations in the model. I'm not sure exactly what that would look like, but I think it may require the ability to transfer energy and mass to neighboring grid columns. Dave Randall gave a talk at the Banff workshop last year (\url{http://www.birs.ca/events/2019/5-day-workshops/19w5153}) about a novel framework of communicating between grid columns that may be useful in this regard. Other than that, I think it's fair to say that the convection scheme should not be forced to maintain convective quasi-equilibrium at fine-scales. And I'll also note that the ZM scheme, in addition to being a QCE model, has a CFL limiter under it's hood that really limits this scheme from ramping up and preventing the resolved dynamics from convecting (see Figure~\ref{fig:before-after}). I'm starting a new project scientist position in July to implement an EDMF scheme into CLUBB, and potentially dethrone the ZM scheme from CAM. Part of my focus will be making sure it has the flexibility to potentially become scale-aware in the future.}} \newline
 
 \subsection*{\small Inappropriate experimental design for a definitive statement on resolution exponent}
 
@@ -81,15 +87,15 @@ results are inconsistent with the Rauscher et al. theory, or I recommend that th
 authors perform a set of tests with the physics timestep held fixed at a small
 value. \newline
 
-{\color{red}{Based on the reviewers concern, we have amended any strong and/or definitive statements about the -1 exponent due to its dependence on physics time-step (see Lines XXX, XXX and XXX). To the authors knowledge, there is no authoritative work on the appropriate choice of physics time-steps in AGCMs across different resolutions. And so we concede that such definitive statements cannot be made until there is consensus on both the physical and numerical justification for physics time-steps across resolutions. More recent work on physics time-steps \citep[e.g.,][]{W2013QJRMS,WETAL2015JAMES,HR2018JAMES} are not necessarily consistent with one another, and do not form a consensus.}} \newline
+{\color{red}{Based on the reviewers concern, we have amended any strong and/or definitive statements about the -1 exponent due to its dependence on physics time-step (columns 1 and 2 on Page 4, 2nd paragraph in the conclusions). To the authors knowledge, there is no authoritative work on the appropriate choice of physics time-steps in AGCMs across different resolutions. And so we concede that definitive statements on the resolution exponent cannot be made until there is consensus on both the physical and numerical justification for physics time-steps across resolutions. More recent work on physics time-steps \citep[e.g.,][]{W2013QJRMS,WETAL2015JAMES,HR2018JAMES} are not necessarily consistent with one another, and do not form a consensus.}} \newline
 
 {\color{red}{In response to the suggestion of fixing a small physics time-step across all resolutions, we are hesitant to agree that this is a more appropriate design choice \citep[see also Fig. 10 in][]{HR2018JAMES}. In thinking about numerical truncation errors, we are concerned that using the same physics time-step at low resolution as in high resolution, may place the simulations in different error regimes. That is, if you think about the log(physics time-step) vs. log(error) curve, it is likely the curves look different in low and high resolution. At high resolution, the model is resolving faster time-scales and so the errors are expected to be larger for a given physics time-step. But a given physics time-step may also be in a different regime at high resolution, i.e., not converging at the same rate as in the low resolution run.}} \newline
 
-{\color{red}{Figure~\ref{fig:dt-conv} shows an example of how for a fixed physics time-step, low and high resolution can be in different regimes. The slope of the error curves for a fixed physics time-step is shallower for high resolution compared with low resolution, for time-steps larger than about 100 s. That is, high resolution is in a less stable regime than low resolution for a fixed time-step (less stable, not un-stable; the errors still decrease with decreasing time-step at high resolution). Interestingly, neither high or low resolution achieve first order convergence for time steps greater than 100 s, which is not really defensible from a numerics standpoint \citep{WETAL2015JAMES}. Given these numerical uncertainties, and the large sensitivity of vertical velocity to physics time-step, I don't think we can say for certain that fixing the physics time-step to a reasonably small value (say 225 s) is any better of an approach than the approach we have taken. We have softened our language in the manuscript to reflect this uncertainty.}} \newline
+{\color{red}{Figure~\ref{fig:dt-conv} shows an example of how for a fixed physics time-step, low and high resolution can be in different regimes. The slope of the error curves for a fixed physics time-step is shallower for high resolution compared with low resolution, for time-steps larger than about 100 s. That is, high resolution is in a less stable regime than low resolution for a fixed time-step (less stable, not unstable; the errors still decrease with decreasing time-step at high resolution). Interestingly, neither high or low resolution achieve first order convergence for time steps greater than 100 s, which is not really defensible from a numerics standpoint \citep{WETAL2015JAMES}. Given these numerical uncertainties, and the large sensitivity of vertical velocity to physics time-step, I don't think we can say for certain that fixing the physics time-step to a reasonably small value (say 225 s) is any better of an approach than the approach we have taken in this manuscript. But based on feedback from the reviewer, we have softened our language. We think this is the more appropriate choice as of now, and advocate for future studies to investigate this issue in cheaper (e.g., reduced planetary radius) idealized configurations before jumping into expensive year long aqua-planet simulations with small physics time-steps.}} \newline
 
 {\color{red}{Finally, we would like to clarify our position on one point. In the conclusions, there is discussion about how the  \cite{RETAL2016CD} scaling may not be in conflict with the $n=-1$ exponent. The paragraph that begins with ``[t]he $n=-1$ power law scaling is potentially in conflict with the scaling proposed by \cite{RETAL2016CD}," has been changed to ``[t]he $n=-1$ power law scaling is not necessarily in conflict with the scaling proposed by \cite{RETAL2016CD}." The wording was changed to more clearly convey what this paragraph actually concludes. Which is, that we do not observe a -5/3 slope of the kinetic energy spectrum near the effective resolution in our simulations. And so we argue that the \cite{RETAL2016CD} may be more appropriate for resolutions greater than 1/4 degree, at least as it pertains to our simulations. }} \newline
 
-{\color{red}{We feel our characterization in the introduction ``...only recently has the vertical velocity field in AGCMs and their sensitivity to resolution received attention (Donner et al. 2016; O’Brien et al. 2016), albeit with seemingly conflicting explanations (Rauscher et al. 2016; Herrington and Reed 2018)" is still accurate, since it is only later in the conclusions that we delve into why the two explanations are not in conflict with one another.}}
+{\color{red}{We feel our characterization in the introduction ``...only recently has the vertical velocity field in AGCMs and their sensitivity to resolution received attention (Donner et al. 2016; O’Brien et al. 2016), albeit with seemingly conflicting explanations (Rauscher et al. 2016; Herrington and Reed 2018)" is still accurate, since it is only later in the conclusions that we delve into why the two explanations are not in conflict with one another. But we are flexible and open to suggestions from the reviewer on whether this language needs to be tweaked.}}
 
 \begin{figure}[t]
 \begin{center}
@@ -104,14 +110,14 @@ value. \newline
 Figure 5: what do the colors represent? The colorbars should have labels. Based
 on the caption, it seems like they should represent precipitation rates. \newline
 
-{\color{red}{Yes, it should be precipitation rate (mm/day). We have added this title to the figure.}} \newline
+{\color{red}{Yes, it should be precipitation rate (mm/day). We have added this label to the figure.}} \newline
 
 Relatedly, the associated text (pg 5, col 1, lines 56-57) state that “changes in M\_s
 with resolution are subtle, while the changes in f\_s with resolution are large (not
 shown).” Why show M\_s if the f\_s term dominates the resolution dependence?
 And if space is a concern, why not put the f\_s figures in supplementary material? \newline
 
-{\color{red}{Part of the reason we don't show f\_s is space, yes. We also thought it was more intuitive to see that larger magnitude precipitation rates are contributing to the global mean, by subsequently unmasking larger regions of M\_s that exceed a frequency tolerance. But we understand that readers may be curious about what f\_s looks like and so we have included it as a supplementary material as the reviewer suggests. We decided to plot both log(M\_s) and log(f\_s ) and extended the x-axis so that all the data are shown.}}
+{\color{red}{Part of the reason we don't show f\_s is space, yes. We also thought it was more intuitive to see that larger magnitude precipitation rates are contributing to the global mean, by subsequently unmasking larger regions of M\_s that exceed a frequency tolerance. But we understand that readers may be curious about what f\_s looks like and so we have included it as a supplementary material as the reviewer suggests, and have attached it to this document. We decided to plot both log(M\_s) and log(f\_s ) and extended the x-axis so that all the data are shown.}}
 
 \begin{figure}[t]
 \begin{center}
@@ -145,6 +151,7 @@ there is very little subsidence above the ZM convection. In case my eyes
 are having a difficult time interpreting this graph, it might be useful to
 draw the contour of constant omega=0. \newline
 
+{\color{red}{We have replaced the original plot to include the $\omega=0$ isoline. We believe the new plot justifies the original statement.}}
 
 \section*{\large Reviewer 2}
 
@@ -152,13 +159,15 @@ draw the contour of constant omega=0. \newline
 
 1. Examining positive or negative omega at the grid box level, rather than at the column level \newline
 
-The authors use <fx><omegax> to estimate column-mean omega for ascending or descending motions within a column. Therefore, my understanding is that there are many cases where a grid column has both <fd><omegad> and <fu><omegau> values. \newline
+The authors use $<fx><omegax>$ to estimate column-mean omega for ascending or descending motions within a column. Therefore, my understanding is that there are many cases where a grid column has both $<fd><omegad>$ and $<fu><omegau>$ values. \newline
 
-With this in mind, it was hard to make sense of phrases such as ‘greater magnitude subsiding motion’ in the abstract (L35). I could not decide whether the phrase meant that free tropospheric subsidence rates (such as omega850) tend to be stronger or whether there are larger areas of subsidence, until I realized that this is not actually captured by the <fd><omegad> decomposition. This decomposition also led to a few points of confusion in the latter half of the study where comparisons of subsidence were made with columnar values, such as FREQZM and dilute-CAPE, or with temperature profiles, as in Fig. 9. In these cases, I assumed that the column mean omega was used, but it left me wondering why the separation between downward motions and upward motions at the grid cell level (as opposed to the column level) was necessary in the first place. \newline
+With this in mind, it was hard to make sense of phrases such as ‘greater magnitude subsiding motion’ in the abstract (L35). I could not decide whether the phrase meant that free tropospheric subsidence rates (such as omega850) tend to be stronger or whether there are larger areas of subsidence, until I realized that this is not actually captured by the $<fd><omegad>$ decomposition. This decomposition also led to a few points of confusion in the latter half of the study where comparisons of subsidence were made with columnar values, such as FREQZM and dilute-CAPE, or with temperature profiles, as in Fig. 9. In these cases, I assumed that the column mean omega was used, but it left me wondering why the separation between downward motions and upward motions at the grid cell level (as opposed to the column level) was necessary in the first place. \newline
 
-Given the additional level of complexity that is added by thinking in terms of the <fd><omegad> and <fu><omegau> of each column, would the authors please provide more text explaining the advantages of the decomposition and why this decomposition was chosen, rather than taking either the omega at a particular pressure level or the column mean omega <omega> to capture upward and downward motions? \newline
+Given the additional level of complexity that is added by thinking in terms of the $<fd><omegad>$ and $<fu><omegau>$ of each column, would the authors please provide more text explaining the advantages of the decomposition and why this decomposition was chosen, rather than taking either the omega at a particular pressure level or the column mean omega $<omega>$ to capture upward and downward motions? \newline
 
-{\color{red}{Working on this.}} \newline
+{\color{red}{We understand that this construct of breaking up $\omega$ at the column level is not typically done, and needs to be more clearly articulated in the text. The goal was to provide a 2D (lat,lon) subsidence metric that could be compared against the activity of the ZM scheme (specifically, how often it is triggered), a 2D field. Choosing a particular level to evaluate $\omega$ is an additional degree of freedom we sought to avoid in the comparison. This is because we wanted a metric of subsidence that characterizes $\omega$ globally, and there is no guarantee that a particular level is representative of $\omega$ everywhere, especially if there are changes to the vertical structure of $\omega$ across resolutions. The advantage of this composition over $<\omega>$ is that the mass weighted sum can mask the magnitudes of the strongly ascending/subsiding motion that may occur in a single column, due to cancellations in the vertical integral. We agree that not much text is devoted to explaining our rationale on why we use this particular breakdown of $\omega$, and so we have added clarifying statements in the text at the reviewers suggestion (page 4, column 2). \newline
+
+In order to conditionally sample an entire vertical profile, as we do for temperature and moisture in the dilute-CAPE calculations, we needed a way of characterizing whether an entire column is predominantly subsiding or ascending. In terms of our breakdown, we would say that a column is predominantly subsiding if  $|<f_d><\omega_d>|$ is larger than $|<f_u><\omega_u>|$ in a grid column. That's the same as saying $<\omega>$ is greater than zero, and so this is why there is a switch from thinking in terms of $<f_d><\omega_d>$ to thinking in terms of $<\omega>$. The reviewers point is well taken, that this is not articulated clearly in the manuscript and could easily lead to confusion. We have added language that makes this switch to $<\omega>$ clear, on page 7, column 1.}} \newline
 
 2. Importance of global mean precipitation rate (total condensation) on atmospheric stability \newline
 
@@ -168,7 +177,17 @@ If the output is available, the condensational heating rates and their differenc
 
 Related to this point, perhaps the authors can explain why we would expect an increase in precipitation rate as a result of increases in resolved precipitation rate. In other words, do we expect resolved precipitation to be more efficient at removing water than parameterized convective precipitation? If so, this should be discussed. \newline
 
-{\color{red}{Working on this.}} \newline
+{\color{red}{We thank the reviewer for this helpful comment, as you've brought up something that we've overlooked. We have done some additional analysis and have concluded that the tendency to increase stratiform precipitation at the expense of deep convective precipitation itself leads to greater heating in the free troposphere. This can be teased out by considering $ne60$ and $ne120$, which have basically the same total precipitation rate, but $ne120$ has less deep convective precipitation indicating its atmosphere is more stable. This suggests stratiform cloud formation responds more forcibly (i.e., larger heating tendencies) to remove a given amount of instability, and the radiative-convective balance in the deep tropics adjusts to a warmer, more stable atmosphere. We can think of two reasons why the stratiform scheme responds more forcibly to instability. (1) Unlike deep convection, the rate of removal of instability is not bound by convective quasi-equilibrium, and (2) the mass fluxes in the deep convection scheme are limited from simulating extreme events. This latter feature is because the ZM mass fluxes can and do hit CFL violations, but when they due, a limiter kicks in to lower the mass fluxes to satisfy stability instead of out-right crashing. This is illustrated in Figure~\ref{fig:before-after}.}} \newline
+
+\begin{figure}[t]
+\begin{center}
+\noindent\includegraphics[width=20pc,angle=0]{temp_pdf_log.pdf}\\
+\end{center}
+\caption{\small {\color{red}{PDF of cloud base base mass fluxes (hPa/s) in the ZM scheme in an aqua-planet simulation. Red lines are the mass fluxes before the CFL limiter is applied, the red lines are after the limiter is applied.}}}
+\label{fig:before-after}
+\end{figure}
+
+{\color{red}{Based on the reviewers comments, we've identified some erroneous statements in the original manuscript that have been removed or fixed. These were assertions that subsidence warming is stabilizing the atmosphere, when in fact it is subsidence drying and condensational heating that stabilize the atmosphere with resolution.}} \newline
 
 3. Comparison with previous studies that used other models \newline
 
